@@ -46,3 +46,9 @@ STR_DOM_MISSIONSTRING_ENABLE_WOMEN_CIVS
 STR_DOM_MISSIONSTRING_COMBAT_UAV_TEAM_MAX_REACHED
 STR_DOM_MISSIONSTRING_COMBAT_UAV_PLAYER_MAX_REACHED
 STR_DOM_MISSIONSTRING_2099
+STR_DOM_MISSIONSTRING_2100
+STR_DOM_MISSIONSTRING_2101
+STR_DOM_MISSIONSTRING_2102
+STR_DOM_MISSIONSTRING_2103
+STR_DOM_MISSIONSTRING_2104
+STR_DOM_MISSIONSTRING_2105
